--- a/src/02-page.html
+++ b/src/02-page.html
@@ -8,6 +8,6 @@
 <body>
     <p>2</p>
     <a href="./index.html">На головну</a> 
-    <script src="./js/02-page.js"></script>
+    <script src="./js/02-page.js" type="module"></script>
 </body>
 </html>
