--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,6 @@
     <p><a href="./01-page.html">Сторінка 1</a></p>
     <p><a href="./02-page.html">Сторінка 2</a></p>
     <p>hi</p>
-    <script src="./index.js"></script>
+    <script src="./index.js" type="module"></script>
 </body>
 </html>
