--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Travel</title>
+    <link rel="stylesheet" href="./css/hello-page.css">
 </head>
 <body>
     <header></header>
-    <main></main>
+    <main>
+        <h1>welcome to my travel site</h1>
+        <div class="container">
+            <p><a href="./01-page.html">Page 1</a></p>
+            <p><a href="./02-page.html">Page 2</a></p>
+        </div>
+        
+    </main>
     <footer></footer>
-    <p><a href="./01-page.html">Сторінка 1</a></p>
-    <p><a href="./02-page.html">Сторінка 2</a></p>
-    <p>hi</p>
+    
     <script src="./index.js" type="module"></script>
 </body>
 </html>
